--- a/package.json
+++ b/package.json
@@ -12,14 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.11",
+    "@angular/cdk": "^11.2.11",
     "@angular/common": "~11.2.11",
     "@angular/compiler": "~11.2.11",
     "@angular/core": "~11.2.11",
     "@angular/forms": "~11.2.11",
+    "@angular/material": "^11.2.11",
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
-    "rxjs": "~6.6.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "@rxjs/rx": "^4.1.0",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "ng2-bootstrap": "^1.6.3",
+    "ngx-bootstrap": "^6.2.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -28,6 +37,7 @@
     "@angular/cli": "~11.2.10",
     "@angular/compiler-cli": "~11.2.11",
     "@types/jasmine": "~3.6.0",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
