--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "96e17fc9-2012-4eec-b6df-adc2a54958ff"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
