--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "@rxjs/rx": "^4.1.0",
     "bootstrap": "^4.6.0",
+    "dropbox": "^9.6.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "ng2-bootstrap": "^1.6.3",
@@ -36,9 +38,11 @@
     "@angular-devkit/build-angular": "~0.1102.10",
     "@angular/cli": "~11.2.10",
     "@angular/compiler-cli": "~11.2.11",
+    "@types/file-saver": "^2.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^12.11.1",
+    "@types/node-fetch": "^2.5.10",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -51,5 +55,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "browser": {
+    "crypto": false
   }
 }
